<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.RegisterActivity">

    <ImageView
        android:id="@+id/onboardingImage"
        android:layout_width="354dp"
        android:layout_height="98dp"
        android:layout_marginTop="@dimen/_50dp"
        android:contentDescription="@string/imglogo"
        android:src="@drawable/onboarding_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.storyapp.view.customviews.NameCustomView
        android:id="@+id/ed_register_name"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:alpha="0"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="@id/onboardingImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/onboardingImage"
        app:layout_constraintTop_toBottomOf="@id/onboardingImage"
        tools:alpha="1" />

    <com.example.storyapp.view.customviews.EmailCustomView
        android:id="@+id/ed_register_email"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@id/ed_register_name"
        app:layout_constraintStart_toStartOf="@id/ed_register_name"
        app:layout_constraintTop_toBottomOf="@id/ed_register_name"
        android:alpha="0"
        tools:alpha="1" />

    <com.example.storyapp.view.customviews.PasswordCustomView
        android:id="@+id/cv_password"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@id/ed_register_email"
        app:layout_constraintStart_toStartOf="@id/ed_register_email"
        app:layout_constraintTop_toBottomOf="@id/ed_register_email"
        android:alpha="0"
        tools:alpha="1"/>

    <com.example.storyapp.view.customviews.SamePassCustomView
        android:id="@+id/ed_confirm_password"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:hint="@string/confirm_password"
        app:layout_constraintBottom_toTopOf="@+id/see_pass"
        app:layout_constraintEnd_toEndOf="@id/cv_password"
        app:layout_constraintStart_toStartOf="@id/cv_password"
        app:layout_constraintTop_toBottomOf="@id/cv_password"
        android:alpha="0"
        tools:alpha="1"/>

    <CheckBox
        android:id="@+id/see_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/show_password"
        app:layout_constraintStart_toStartOf="@+id/ed_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_confirm_password"
        android:alpha="0"
        tools:alpha="1" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_56dp"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="@id/ed_confirm_password"
        app:layout_constraintStart_toStartOf="@id/ed_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/see_pass"
        android:alpha="0"
        tools:alpha="1"/>

    <TextView
        android:id="@+id/txt_back_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintEnd_toEndOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="@id/btn_register"
        app:layout_constraintHorizontal_bias="0.392"
        android:alpha="0"
        tools:alpha="1"/>

    <TextView
        android:id="@+id/btn_back_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_3dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txt_back_login"
        app:layout_constraintTop_toTopOf="@+id/txt_back_login"
        android:alpha="0"
        tools:alpha="1"/>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>